[tool.poetry]
name = "natodi-backend"
version = "0.1.0"
description = ""
authors = ["Oleksandr Korienev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.28.0"
furl = "^2.1.3"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
aioboto3 = "^12.0.0"
alembic = "^1.12.1"
typer = "^0.9.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
